// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination Matches the desktop snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 30rem;
  height: 1.5rem;
  padding: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  font-size: 0.9rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin-bottom: 0;
  margin-right: var(--spacing-3x);
  white-space: nowrap;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

<nav
  aria-labelledby="uuid1"
  class="c0"
>
  <div
    aria-live="off"
    role="status"
  >
    <h3
      class="c1"
      data-testid="currentPageLabelHeading"
      id="uuid1"
    >
      <span
        class="c2"
        data-testid="resultsLabel"
      >
        <span
          class="c3"
        >
          Pagination - 
        </span>
        0–0 of 0 results
      </span>
    </h3>
  </div>
  <ol
    class="c4"
  />
</nav>
`;

exports[`Pagination Matches the desktop snapshot with multiples digits page numbers 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 30rem;
  height: 1.5rem;
  padding: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  font-size: 0.9rem;
  font-weight: var(--font-normal);
  line-height: 1.5rem;
  margin-bottom: 0;
  margin-right: var(--spacing-3x);
  white-space: nowrap;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

<nav
  aria-labelledby="uuid1"
  class="c0"
>
  <div
    aria-live="off"
    role="status"
  >
    <h3
      class="c1"
      data-testid="currentPageLabelHeading"
      id="uuid1"
    >
      <span
        class="c2"
        data-testid="resultsLabel"
      >
        <span
          class="c3"
        >
          Pagination - 
        </span>
        0–0 of 0 results
      </span>
    </h3>
  </div>
  <ol
    class="c4"
  />
</nav>
`;

exports[`Pagination Matches the mobile snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 30rem;
  height: 1.5rem;
  padding: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin-bottom: var(--spacing-1halfx);
  margin-right: 0;
  white-space: nowrap;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

<nav
  aria-labelledby="uuid1"
  class="c0"
>
  <div
    aria-live="off"
    role="status"
  >
    <h3
      class="c1"
      data-testid="currentPageLabelHeading"
      id="uuid1"
    >
      <span
        class="c2"
        data-testid="resultsLabel"
      >
        <span
          class="c3"
        >
          Pagination - 
        </span>
        0–0 of 0 results
      </span>
    </h3>
  </div>
  <ol
    class="c4"
  />
</nav>
`;

exports[`Pagination Matches the mobile snapshot with multiples digits page numbers 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 30rem;
  height: 1.5rem;
  padding: 0;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 1.5rem;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c3 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.c2 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin-bottom: var(--spacing-1halfx);
  margin-right: 0;
  white-space: nowrap;
}

.c1 {
  font-size: 0.875rem;
  line-height: 1.5rem;
}

<nav
  aria-labelledby="uuid1"
  class="c0"
>
  <div
    aria-live="off"
    role="status"
  >
    <h3
      class="c1"
      data-testid="currentPageLabelHeading"
      id="uuid1"
    >
      <span
        class="c2"
        data-testid="resultsLabel"
      >
        <span
          class="c3"
        >
          Pagination - 
        </span>
        0–0 of 0 results
      </span>
    </h3>
  </div>
  <ol
    class="c4"
  />
</nav>
`;
